# VKKit

./: Alphabet.cpp  Alphabet.h  Buffer.cpp  Buffer.h  BufferVec.cpp  BufferVec.h  Bugs.txt  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Concurrency.cpp  Concurrency.h  Constants.h  Context.cpp  Context.h  Debugger.cpp  Debugger.h  DefaultConfigurations.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageObjects.cpp  ImageObjects.h  InitLibs.cpp  InitLibs.h  Instance.cpp  Instance.h  Model.cpp  Model.h  PhysicalDevice.cpp  PhysicalDevice.h  README.md  RenderData.cpp  (+15 more)
DefaultConfigurations/: CMakeLists.txt  Color2DPipeline.cpp  Color3DPipeline.cpp  TextPipeline.cpp  Texture2DPipeline.cpp  Texture3DPipeline.cpp
Shaders/: Color2D.frag  Color2D.vert  Color2Dv.spv  Color3D.vert  Color3Dv.spv  Text.frag  Text.vert  Textf.spv  Texture2D.frag  Texture2D.vert  Texture2Dv.spv  Texture3D.frag  Texture3D.vert  Textv.spv
